--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,245 @@
-langchain
-python-dotenv
-ipykernel
-langchain-community
-pypdf
-bs4
-arxiv
-pymupdf
-wikipedia
-langchain-text-splitters
-langchain-openai
-chromadb
-sentence_transformers
-langchain_huggingface
-faiss-cpu
-langchain_chroma
-duckdb
-pandas
-openai
-langchain-groq
+aiofiles==24.1.0
+aiohappyeyeballs==2.4.3
+aiohttp==3.11.7
+aiosignal==1.3.1
+altair==5.4.1
+annotated-types==0.7.0
+anyio==4.6.2.post1
+arxiv==2.1.3
+asgiref==3.8.1
+asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
+async-timeout==4.0.3
+attrs==24.2.0
+backoff==2.2.1
+bcrypt==4.2.1
+beautifulsoup4==4.12.3
+bleach==6.2.0
+blinker==1.9.0
+Brotli==1.1.0
+bs4==0.0.2
+build==1.2.2.post1
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.0
+chroma-hnswlib==0.7.6
+chromadb==0.5.20
+click==8.1.7
+colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
+coloredlogs==15.0.1
+comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
+contourpy==1.3.1
+cryptography==43.0.3
+cycler==0.12.1
+dataclasses-json==0.6.7
+debugpy @ file:///D:/bld/debugpy_1732236678331/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
+defusedxml==0.7.1
+Deprecated==1.2.15
+distro==1.9.0
+duckdb==1.1.3
 duckduckgo_search==5.3.1b1
-pymupdf
-arxiv
-wikipedia
-mysql-connector-python
-SQLAlchemy
+durationpy==0.9
+emoji==2.14.0
+eval_type_backport==0.2.0
+exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1720869315914/work
+executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1725214404607/work
+faiss-cpu==1.9.0.post1
+fastapi==0.115.5
+feedparser==6.0.11
+filelock==3.16.1
+filetype==1.2.0
+flatbuffers==24.3.25
+fonttools==4.55.3
+frozenlist==1.5.0
+fsspec==2024.10.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-auth==2.36.0
+googleapis-common-protos==1.66.0
+greenlet==3.1.1
+groq==0.12.0
+grpcio==1.68.0
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+html5lib==1.1
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.27.2
+httpx-sse==0.4.0
+huggingface-hub==0.26.2
+humanfriendly==10.0
+hyperframe==6.0.1
+idna==3.10
+imbalanced-learn==0.13.0
+imblearn==0.0
+importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1726082825846/work
+importlib_resources==6.4.5
+ipykernel @ file:///D:/bld/ipykernel_1719845595208/work
+ipython @ file:///D:/bld/ipython_1729866374643/work
+ipywidgets==8.1.5
+jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1731317204262/work
+Jinja2==3.1.4
+jiter==0.7.1
+joblib==1.4.2
+jsonpatch==1.33
+jsonpath-python==1.0.6
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1726610684920/work
+jupyter_core @ file:///D:/bld/jupyter_core_1727163532151/work
+jupyterlab_widgets==3.0.13
+kaggle==1.6.17
+kiwisolver==1.4.7
+kubernetes==31.0.0
+langchain==0.3.14
+langchain-chroma==0.1.4
+langchain-community==0.3.7
+langchain-core==0.3.29
+langchain-groq==0.2.1
+langchain-huggingface==0.1.2
+langchain-ollama==0.2.2
+langchain-openai==0.2.14
+langchain-text-splitters==0.3.5
+langdetect==1.0.9
+langserve==0.3.1
+langsmith==0.1.147
+lxml==5.3.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.23.1
+matplotlib==3.10.0
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
+mdurl==0.1.2
+mmh3==5.0.1
+monotonic==1.6
+mpmath==1.3.0
+multidict==6.1.0
+mypy-extensions==1.0.0
+mysql-connector-python==9.1.0
+narwhals==1.14.1
+nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
+networkx==3.4.2
+nltk==3.9.1
+numexpr==2.10.1
+numpy==1.26.4
+oauthlib==3.2.2
+olefile==0.47
+ollama==0.4.6
+onnxruntime==1.20.1
+openai==1.59.5
+opentelemetry-api==1.28.2
+opentelemetry-exporter-otlp-proto-common==1.28.2
+opentelemetry-exporter-otlp-proto-grpc==1.28.2
+opentelemetry-instrumentation==0.49b2
+opentelemetry-instrumentation-asgi==0.49b2
+opentelemetry-instrumentation-fastapi==0.49b2
+opentelemetry-proto==1.28.2
+opentelemetry-sdk==1.28.2
+opentelemetry-semantic-conventions==0.49b2
+opentelemetry-util-http==0.49b2
+orjson==3.10.11
+overrides==7.7.0
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1731802491770/work
+pandas==2.2.3
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
+patsy==1.0.1
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
+pillow==11.0.0
+platformdirs @ file:///home/conda/feedstock_root/build_artifacts/platformdirs_1726613481435/work
+posthog==3.7.2
+prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1727341649933/work
+propcache==0.2.0
+protobuf==5.28.3
+psutil @ file:///D:/bld/psutil_1729847160832/work
+pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1721585709575/work
+pyarrow==18.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
+pydantic==2.9.2
+pydantic-settings==2.6.1
+pydantic_core==2.23.4
+pydeck==0.9.1
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
+PyMuPDF==1.24.14
+pyparsing==3.2.0
+pypdf==5.1.0
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+pyreadline3==3.5.4
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+python-iso639==2024.10.22
+python-magic==0.4.27
+python-oxmsg==0.0.1
+python-slugify==8.0.4
+pytube==15.0.0
+pytz==2024.2
+pywin32==307
+PyYAML==6.0.2
+pyzmq @ file:///D:/bld/pyzmq_1728642398422/work
+RapidFuzz==3.10.1
+referencing==0.35.1
+regex==2024.11.6
+requests==2.32.3
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==13.9.4
+rpds-py==0.21.0
+rsa==4.9
+safetensors==0.4.5
+scikit-learn==1.5.2
+scipy==1.14.1
+seaborn==0.13.2
+sentence-transformers==3.3.1
+sgmllib3k==1.0.0
+shellingham==1.5.4
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+sklearn-compat==0.1.1
+smmap==5.0.1
+sniffio==1.3.1
+socksio==1.0.0
+soupsieve==2.6
+SQLAlchemy==2.0.35
+stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
+starlette==0.41.3
+statsmodels==0.14.4
+streamlit==1.40.1
+sympy==1.13.1
+tenacity==9.0.0
+text-unidecode==1.3
+threadpoolctl==3.5.0
+tiktoken==0.8.0
+tokenizers==0.20.3
+toml==0.10.2
+tomli==2.1.0
+torch==2.5.1
+tornado @ file:///D:/bld/tornado_1724956183921/work
+tqdm==4.67.0
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
+transformers==4.46.3
+typer==0.13.1
+typing-inspect==0.9.0
+typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1717802530399/work
+tzdata==2024.2
+unstructured==0.16.6
+unstructured-client==0.28.0
+urllib3==2.2.3
+uvicorn==0.32.1
 validators==0.28.1
-youtube_transcript_api
-unstructured
-pytube
-numexpr
-huggingface_hub
-streamlit
-gunicorn==20.1.0
-sqlite3 
+watchdog==6.0.0
+watchfiles==0.24.0
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==14.1
+widgetsnbextension==4.0.13
+wikipedia==1.4.0
+wrapt==1.17.0
+yarl==1.18.0
+youtube-transcript-api==0.6.3
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1731262100163/work
